--- a/system/views/argument/sitting_login.html
+++ b/system/views/argument/sitting_login.html
@@ -17,8 +17,8 @@
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
                         <div class="brand">
-                            <h1>Argument System.</h1>
-                            <h3>argument platflom for student.</h3>
+                            <h1>Co-Argu System</h1>
+                            <h3>Let's discuss online together</h3>
                         </div>
                     </div>
                 </div>
